# splint

./: .cproject  .gitignore  LICENSE  Makefile.am  configure.ac
src/: Makefile.am  test.c
